Reaction network: commenting all alpha=0 reaction. Because if one of these is part of a branching ratio, this messes up the chemical scheme. And it is the case here.

--- a/example_simulation/grain_reactions.in
+++ b/example_simulation/grain_reactions.in
@@ -327,8 +327,8 @@ JH         JH                     -> JH2                                        
 JH         JH                     -> H2                                                       1.000e+00  0.000e+00  0.000e+00 0.00e+00 0.00e+00   NA 14  -9999   9999  0  6415 1  1
 JH         JH2CN                  -> JCH2NH                                                   1.000e+00  0.000e+00  0.000e+00 0.00e+00 0.00e+00   NA 14  -9999   9999  0  6416 1  1
 JH         JH2CN                  -> CH2NH                                                    1.000e+00  0.000e+00  0.000e+00 0.00e+00 0.00e+00   NA 14  -9999   9999  0  6417 1  1
-JH         JH2CO                  -> JHCO       JH2                                           0.000e+00  0.000e+00  0.000e+00 0.00e+00 0.00e+00   NA 14  -9999   9999  0  6418 1  1
-JH         JH2CO                  -> HCO        H2                                            0.000e+00  0.000e+00  0.000e+00 0.00e+00 0.00e+00   NA 14  -9999   9999  0  6419 1  1
+!JH         JH2CO                  -> JHCO       JH2                                           0.000e+00  0.000e+00  0.000e+00 0.00e+00 0.00e+00   NA 14  -9999   9999  0  6418 1  1
+!JH         JH2CO                  -> HCO        H2                                            0.000e+00  0.000e+00  0.000e+00 0.00e+00 0.00e+00   NA 14  -9999   9999  0  6419 1  1
 JH         JHOOH                  -> JH2O       JOH                                           1.000e+00  0.000e+00  0.000e+00 0.00e+00 0.00e+00   NA 14  -9999   9999  0  6420 1  1
 JH         JHOOH                  -> H2O        OH                                            1.000e+00  0.000e+00  0.000e+00 0.00e+00 0.00e+00   NA 14  -9999   9999  0  6421 1  1
 JH         JHOOH                  -> JO2H       JH2                                           1.000e+00  0.000e+00  0.000e+00 0.00e+00 0.00e+00   NA 14  -9999   9999  0  6422 1  1
@@ -875,7 +875,7 @@ JSiO2                             -> SiO2                                       
 JSiS                              -> SiS                                                      1.000e+00  0.000e+00  0.000e+00 0.00e+00 0.00e+00   NA 16  -9999   9999  0  6963 1  1
 JSO                               -> SO                                                       1.000e+00  0.000e+00  0.000e+00 0.00e+00 0.00e+00   NA 16  -9999   9999  0  6964 1  1
 JSO2                              -> SO2                                                      1.000e+00  0.000e+00  0.000e+00 0.00e+00 0.00e+00   NA 16  -9999   9999  0  6965 1  1
-JC10                              -> JC9        JC                                            0.000e+00  0.000e+00  0.000e+00 0.00e+00 0.00e+00   NA 17  -9999   9999  0  6966 1  1
+!JC10                              -> JC9        JC                                            0.000e+00  0.000e+00  0.000e+00 0.00e+00 0.00e+00   NA 17  -9999   9999  0  6966 1  1
 JC10                              -> JC7        JC3                                           7.500e+02  0.000e+00  0.000e+00 0.00e+00 0.00e+00   NA 17  -9999   9999  0  6967 1  1
 JC10                              -> JC5        JC5                                           2.500e+02  0.000e+00  0.000e+00 0.00e+00 0.00e+00   NA 17  -9999   9999  0  6968 1  1
 JC2                               -> JC         JC                                            2.370e+02  0.000e+00  0.000e+00 0.00e+00 0.00e+00   NA 17  -9999   9999  0  6969 1  1
@@ -922,7 +922,7 @@ JC6                               -> JC4        JC2                             
 JC6                               -> JC3        JC3                                           8.000e+02  0.000e+00  0.000e+00 0.00e+00 0.00e+00   NA 17  -9999   9999  0  7010 1  1
 JC6H                              -> JC6        JH                                            5.000e+03  0.000e+00  0.000e+00 0.00e+00 0.00e+00   NA 17  -9999   9999  0  7011 1  1
 JC6H2                             -> JC6H       JH                                            1.750e+03  0.000e+00  0.000e+00 0.00e+00 0.00e+00   NA 17  -9999   9999  0  7012 1  1
-JC7                               -> JC6        JC                                            0.000e+00  0.000e+00  0.000e+00 0.00e+00 0.00e+00   NA 17  -9999   9999  0  7013 1  1
+!JC7                               -> JC6        JC                                            0.000e+00  0.000e+00  0.000e+00 0.00e+00 0.00e+00   NA 17  -9999   9999  0  7013 1  1
 JC7                               -> JC5        JC2                                           2.000e+02  0.000e+00  0.000e+00 0.00e+00 0.00e+00   NA 17  -9999   9999  0  7014 1  1
 JC7                               -> JC4        JC3                                           8.000e+02  0.000e+00  0.000e+00 0.00e+00 0.00e+00   NA 17  -9999   9999  0  7015 1  1
 JC7H                              -> JC7        JH                                            5.000e+03  0.000e+00  0.000e+00 0.00e+00 0.00e+00   NA 17  -9999   9999  0  7016 1  1
@@ -933,7 +933,7 @@ JC8                               -> JC5        JC3                             
 JC8                               -> JC4        JC4                                           6.000e+01  0.000e+00  0.000e+00 0.00e+00 0.00e+00   NA 17  -9999   9999  0  7021 1  1
 JC8H                              -> JC8        JH                                            5.000e+03  0.000e+00  0.000e+00 0.00e+00 0.00e+00   NA 17  -9999   9999  0  7022 1  1
 JC8H2                             -> JC8H       JH                                            1.750e+03  0.000e+00  0.000e+00 0.00e+00 0.00e+00   NA 17  -9999   9999  0  7023 1  1
-JC9                               -> JC8        JC                                            0.000e+00  0.000e+00  0.000e+00 0.00e+00 0.00e+00   NA 17  -9999   9999  0  7024 1  1
+!JC9                               -> JC8        JC                                            0.000e+00  0.000e+00  0.000e+00 0.00e+00 0.00e+00   NA 17  -9999   9999  0  7024 1  1
 JC9                               -> JC7        JC2                                           5.000e+01  0.000e+00  0.000e+00 0.00e+00 0.00e+00   NA 17  -9999   9999  0  7025 1  1
 JC9                               -> JC6        JC3                                           6.500e+02  0.000e+00  0.000e+00 0.00e+00 0.00e+00   NA 17  -9999   9999  0  7026 1  1
 JC9                               -> JC5        JC4                                           3.000e+02  0.000e+00  0.000e+00 0.00e+00 0.00e+00   NA 17  -9999   9999  0  7027 1  1
@@ -1293,8 +1293,8 @@ JSiO2                             -> JSiO       JO                              
 JSiS                              -> JSi        JS                                            1.000e-10  0.000e+00  2.300e+00 0.00e+00 0.00e+00   NA 19  -9999   9999  0  7381 1  1
 JSO                               -> JO         JS                                            3.300e-10  0.000e+00  1.400e+00 0.00e+00 0.00e+00   NA 19  -9999   9999  0  7382 1  1
 JSO2                              -> JSO        JO                                            1.050e-09  0.000e+00  1.740e+00 0.00e+00 0.00e+00   NA 19  -9999   9999  0  7383 1  1
-JC10                              -> JC9        JC                                            0.000e+00  0.000e+00  2.500e+00 0.00e+00 0.00e+00   NA 20  -9999   9999  0  7384 1  1
-JC10                              -> JC8        JC2                                           0.000e+00  0.000e+00  2.500e+00 0.00e+00 0.00e+00   NA 20  -9999   9999  0  7385 1  1
+!JC10                              -> JC9        JC                                            0.000e+00  0.000e+00  2.500e+00 0.00e+00 0.00e+00   NA 20  -9999   9999  0  7384 1  1
+!JC10                              -> JC8        JC2                                           0.000e+00  0.000e+00  2.500e+00 0.00e+00 0.00e+00   NA 20  -9999   9999  0  7385 1  1
 JC10                              -> JC7        JC3                                           1.500e-10  0.000e+00  2.500e+00 0.00e+00 0.00e+00   NA 20  -9999   9999  0  7386 1  1
 JC10                              -> JC5        JC5                                           5.000e-11  0.000e+00  2.500e+00 0.00e+00 0.00e+00   NA 20  -9999   9999  0  7387 1  1
 JC2                               -> JC         JC                                            1.000e-10  0.000e+00  2.000e+00 0.00e+00 0.00e+00   NA 20  -9999   9999  0  7388 1  1
@@ -1335,21 +1335,21 @@ JC6                               -> JC3        JC3                             
 JC6H2                             -> JC6        JH2                                           9.300e-11  0.000e+00  2.500e+00 0.00e+00 0.00e+00   NA 20  -9999   9999  0  7423 1  1
 JC6H2                             -> JC6H       JH                                            9.300e-11  0.000e+00  2.500e+00 0.00e+00 0.00e+00   NA 20  -9999   9999  0  7424 1  1
 JC6H2                             -> JC6        JH         JH                                 1.400e-11  0.000e+00  2.500e+00 0.00e+00 0.00e+00   NA 20  -9999   9999  0  7425 1  1
-JC7                               -> JC6        JC                                            0.000e+00  0.000e+00  2.500e+00 0.00e+00 0.00e+00   NA 20  -9999   9999  0  7426 1  1
+!JC7                               -> JC6        JC                                            0.000e+00  0.000e+00  2.500e+00 0.00e+00 0.00e+00   NA 20  -9999   9999  0  7426 1  1
 JC7                               -> JC5        JC2                                           4.000e-11  0.000e+00  2.500e+00 0.00e+00 0.00e+00   NA 20  -9999   9999  0  7427 1  1
 JC7                               -> JC4        JC3                                           1.600e-10  0.000e+00  2.500e+00 0.00e+00 0.00e+00   NA 20  -9999   9999  0  7428 1  1
 JC7H                              -> JC7        JH                                            1.000e-10  0.000e+00  2.500e+00 0.00e+00 0.00e+00   NA 20  -9999   9999  0  7429 1  1
 JC7H                              -> JC6H       JC                                            1.000e-10  0.000e+00  2.500e+00 0.00e+00 0.00e+00   NA 20  -9999   9999  0  7430 1  1
 JHC7H                             -> JC7H       JH                                            1.000e-10  0.000e+00  2.500e+00 0.00e+00 0.00e+00   NA 20  -9999   9999  0  7431 1  1
 JHC7H                             -> JC7        JH2                                           1.000e-10  0.000e+00  2.500e+00 0.00e+00 0.00e+00   NA 20  -9999   9999  0  7432 1  1
-JC8                               -> JC7        JC                                            0.000e+00  0.000e+00  2.500e+00 0.00e+00 0.00e+00   NA 20  -9999   9999  0  7433 1  1
+!JC8                               -> JC7        JC                                            0.000e+00  0.000e+00  2.500e+00 0.00e+00 0.00e+00   NA 20  -9999   9999  0  7433 1  1
 JC8                               -> JC6        JC2                                           4.000e-11  0.000e+00  2.500e+00 0.00e+00 0.00e+00   NA 20  -9999   9999  0  7434 1  1
 JC8                               -> JC5        JC3                                           1.600e-10  0.000e+00  2.500e+00 0.00e+00 0.00e+00   NA 20  -9999   9999  0  7435 1  1
 JC8H                              -> JC8        JH                                            1.000e-10  0.000e+00  2.500e+00 0.00e+00 0.00e+00   NA 20  -9999   9999  0  7436 1  1
 JC8H                              -> JC7H       JC                                            1.000e-10  0.000e+00  2.500e+00 0.00e+00 0.00e+00   NA 20  -9999   9999  0  7437 1  1
 JC8H2                             -> JC8        JH2                                           1.000e-10  0.000e+00  2.500e+00 0.00e+00 0.00e+00   NA 20  -9999   9999  0  7438 1  1
 JC8H2                             -> JC8H       JH                                            1.000e-10  0.000e+00  2.500e+00 0.00e+00 0.00e+00   NA 20  -9999   9999  0  7439 1  1
-JC9                               -> JC8        JC                                            0.000e+00  0.000e+00  2.500e+00 0.00e+00 0.00e+00   NA 20  -9999   9999  0  7440 1  1
+!JC9                               -> JC8        JC                                            0.000e+00  0.000e+00  2.500e+00 0.00e+00 0.00e+00   NA 20  -9999   9999  0  7440 1  1
 JC9                               -> JC7        JC2                                           1.000e-11  0.000e+00  2.500e+00 0.00e+00 0.00e+00   NA 20  -9999   9999  0  7441 1  1
 JC9                               -> JC6        JC3                                           1.300e-10  0.000e+00  2.500e+00 0.00e+00 0.00e+00   NA 20  -9999   9999  0  7442 1  1
 JC9                               -> JC5        JC4                                           6.000e-11  0.000e+00  2.500e+00 0.00e+00 0.00e+00   NA 20  -9999   9999  0  7443 1  1
