--- a/.gitignore
+++ b/.gitignore
@@ -29,3 +29,4 @@ DOC/nautilus_documentation.ind
 DOC/nautilus_documentation.synctex.gz
 DOC/nautilus_documentation.tex.bak
 DOC/nautilus_documentation.toc
+nautilus_major_reactions
