Create a backup file of parameters.in before rewriting it.

--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,4 @@ DOC/nautilus_documentation.synctex.gz
 DOC/nautilus_documentation.tex.bak
 DOC/nautilus_documentation.toc
 nautilus_major_reactions
+*.bak
