First version of a new program that display evolution of 'main reaction' of a given species, both for production and destruction.

--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,7 @@ DOC/nautilus_documentation.tex.bak
 DOC/nautilus_documentation.toc
 nautilus_major_reactions
 *.bak
+nautilus_trace_major
+example_simulation/*.pdf
+example_simulation/*.reaction
+example_simulation/*.percentage
