Update of HCl binding energy on H2O ice surfaces (Olanrewaju.O et al. 2011,J. Phys. Chem. A,115,5936-5942)

--- a/example_simulation/surface_parameters.in
+++ b/example_simulation/surface_parameters.in
@@ -152,7 +152,7 @@ JCCl         47  1900.    0. 0.0e+00 CL+C                     * +104.20
 JCl          35  1100.    0. 0.0e+00 same as S                *  +28.60
 JClO         51  1900.    0. 0.0e+00 CL+O                     *  +24.20
 JCP          43  1900.    0. 0.0e+00 C+P                      * +123.80
-JHCl         36  1550.    0. 0.0e+00 CL+H                     *  -22.00
+JHCl         36  5174.    0. 0.0e+00 Olanrewaju 2011,J.Ph.Ch  *  -22.00
 JHCP         37  2350.    0. 0.0e+00 H+C+P                    *  +51.00
 JHPO         48  2350.    0. 0.0e+00 H+P+O                    *  -12.70
 JN2O         44  2400.    0. 0.0e+00 N+N+O                    *  +20.30
