--- a/example_simulation/parameters.in
+++ b/example_simulation/parameters.in
@@ -20,6 +20,7 @@ grain_temperature_type = fixed ! fixed, gas, table or computed
 ! table: Tgrain is interpolated from structure_evolution.dat data file (5th optional column) ; 
 ! computed: calculated from uv_flux and visual extinction by radiative equilibrium
 is_grain_reactions = 1 ! Accretion, grain surface reactions
+is_h2_adhoc_form = 0 ! Ad hoc formation of H2 on grain surfaces (1=activated)
 is_absorption = 1 ! H2 AND CO SELF-SHIELDING
 grain_tunneling_diffusion = 0 ! 0=thermal; For H,H2: 1=QM1; 2=QM2; 3=choose fastest
 modify_rate_flag = 1 ! 1=modify H; 2=modify H,H2, 3=modify all, -1=H+H only
