Modifications in grain_species_kida.uva.2015.in and grain_reactions_kida.uva.2015.in

--- a/Networks/kida.uva.2015/grain_reactions_kida.uva.2015.in
+++ b/Networks/kida.uva.2015/grain_reactions_kida.uva.2015.in
@@ -2429,3 +2429,43 @@ HOCO                              JHOCO                                         
 JHOCO                             HOCO                                                     1.000E+00  0.000E+00  0.000E+00 0.00E+00 0.00E+00   NA 15  -9999   9999  0  9469 1  1
 JHOCO                             HOCO                                                     1.000E+00  0.000E+00  0.000E+00 0.00E+00 0.00E+00   NA 16  -9999   9999  0  9470 1  1
 JH2        JH2                    JH2        H2                                            1.000e+00  0.000e+00  0.000e+00 0.00e+00 0.00e+00   NA 14  -9999   9999  0  9471 1  1
+JCH3CO                            CH3CO                                                    1.000E+00  0.000E+00  0.000E+00 0.00E+00 0.00E+00   NA 66  -9999   9999  0  9472 1  1
+JCH3OCH2                          CH3OCH2                                                  1.000E+00  0.000E+00  0.000E+00 0.00E+00 0.00E+00   NA 66  -9999   9999  0  9473 1  1 
+JCH2NH2                           CH2NH2                                                   1.000E+00  0.000E+00  0.000E+00 0.00E+00 0.00E+00   NA 66  -9999   9999  0  9474 1  1 
+JHCOCO                            HCOCO                                                    1.000E+00  0.000E+00  0.000E+00 0.00E+00 0.00E+00   NA 66  -9999   9999  0  9475 1  1  
+JHCOCHO                           HCOCHO                                                   1.000E+00  0.000E+00  0.000E+00 0.00E+00 0.00E+00   NA 66  -9999   9999  0  9477 1  1
+JC-H2O                            C          JH2O                                          1.000E+00  0.000E+00  0.000E+00 0.00E+00 0.00E+00   NA 66  -9999   9999  0  9478 1  1
+JC-CO2                            C          JCO2                                          1.000E+00  0.000E+00  0.000E+00 0.00E+00 0.00E+00   NA 66  -9999   9999  0  9479 1  1
+JC-CH3OH                          C          JCH3OH                                        1.000E+00  0.000E+00  0.000E+00 0.00E+00 0.00E+00   NA 66  -9999   9999  0  9480 1  1
+JC-CH4                            C          JCH4                                          1.000E+00  0.000E+00  0.000E+00 0.00E+00 0.00E+00   NA 66  -9999   9999  0  9481 1  1
+JC-NH3                            C          JNH3                                          1.000E+00  0.000E+00  0.000E+00 0.00E+00 0.00E+00   NA 66  -9999   9999  0  9482 1  1
+JCH-NH3                           CH         JNH3                                          1.000E+00  0.000E+00  0.000E+00 0.00E+00 0.00E+00   NA 66  -9999   9999  0  9483 1  1
+JCH-H2O                           CH         JH2O                                          1.000E+00  0.000E+00  0.000E+00 0.00E+00 0.00E+00   NA 66  -9999   9999  0  9484 1  1
+JCH-CH3OH                         CH         JCH3OH                                        1.000E+00  0.000E+00  0.000E+00 0.00E+00 0.00E+00   NA 66  -9999   9999  0  9485 1  1
+JCH-CO2                           CH         JCO2                                          1.000E+00  0.000E+00  0.000E+00 0.00E+00 0.00E+00   NA 66  -9999   9999  0  9486 1  1
+JCH2-CO2                          CH2        JCO2                                          1.000E+00  0.000E+00  0.000E+00 0.00E+00 0.00E+00   NA 66  -9999   9999  0  9487 1  1
+JCH3-CO2                          CH3        JCO2                                          1.000E+00  0.000E+00  0.000E+00 0.00E+00 0.00E+00   NA 66  -9999   9999  0  9488 1  1
+JCH4-CO2                          CH4        JCO2                                          1.000E+00  0.000E+00  0.000E+00 0.00E+00 0.00E+00   NA 66  -9999   9999  0  9489 1  1
+JO-CO                             O          JCO                                           1.000E+00  0.000E+00  0.000E+00 0.00E+00 0.00E+00   NA 66  -9999   9999  0  9490 1  1
+JHOCO                             HOCO                                                     1.000E+00  0.000E+00  0.000E+00 0.00E+00 0.00E+00   NA 66  -9999   9999  0  9491 1  1 
+JCH3CO                            CH3CO                                                    1.000E+00  0.000E+00  0.000E+00 0.00E+00 0.00E+00   NA 67  -9999   9999  0  9492 1  1
+JCH3OCH2                          CH3OCH2                                                  1.000E+00  0.000E+00  0.000E+00 0.00E+00 0.00E+00   NA 67  -9999   9999  0  9493 1  1 
+JCH2NH2                           CH2NH2                                                   1.000E+00  0.000E+00  0.000E+00 0.00E+00 0.00E+00   NA 67  -9999   9999  0  9494 1  1 
+JHCOCO                            HCOCO                                                    1.000E+00  0.000E+00  0.000E+00 0.00E+00 0.00E+00   NA 67  -9999   9999  0  9495 1  1  
+JHCOCHO                           HCOCHO                                                   1.000E+00  0.000E+00  0.000E+00 0.00E+00 0.00E+00   NA 67  -9999   9999  0  9496 1  1
+JC-H2O                            C          JH2O                                          1.000E+00  0.000E+00  0.000E+00 0.00E+00 0.00E+00   NA 67  -9999   9999  0  9497 1  1
+JC-CO2                            C          JCO2                                          1.000E+00  0.000E+00  0.000E+00 0.00E+00 0.00E+00   NA 67  -9999   9999  0  9498 1  1
+JC-CH3OH                          C          JCH3OH                                        1.000E+00  0.000E+00  0.000E+00 0.00E+00 0.00E+00   NA 67  -9999   9999  0  9499 1  1
+JC-CH4                            C          JCH4                                          1.000E+00  0.000E+00  0.000E+00 0.00E+00 0.00E+00   NA 67  -9999   9999  0  9500 1  1
+JC-NH3                            C          JNH3                                          1.000E+00  0.000E+00  0.000E+00 0.00E+00 0.00E+00   NA 67  -9999   9999  0  9501 1  1
+JCH-NH3                           CH         JNH3                                          1.000E+00  0.000E+00  0.000E+00 0.00E+00 0.00E+00   NA 67  -9999   9999  0  9502 1  1
+JCH-H2O                           CH         JH2O                                          1.000E+00  0.000E+00  0.000E+00 0.00E+00 0.00E+00   NA 67  -9999   9999  0  9503 1  1
+JCH-CH3OH                         CH         JCH3OH                                        1.000E+00  0.000E+00  0.000E+00 0.00E+00 0.00E+00   NA 67  -9999   9999  0  9504 1  1
+JCH-CO2                           CH         JCO2                                          1.000E+00  0.000E+00  0.000E+00 0.00E+00 0.00E+00   NA 67  -9999   9999  0  9505 1  1
+JCH2-CO2                          CH2        JCO2                                          1.000E+00  0.000E+00  0.000E+00 0.00E+00 0.00E+00   NA 67  -9999   9999  0  9506 1  1
+JCH3-CO2                          CH3        JCO2                                          1.000E+00  0.000E+00  0.000E+00 0.00E+00 0.00E+00   NA 67  -9999   9999  0  9507 1  1
+JCH4-CO2                          CH4        JCO2                                          1.000E+00  0.000E+00  0.000E+00 0.00E+00 0.00E+00   NA 67  -9999   9999  0  9508 1  1
+JO-CO                             O          JCO                                           1.000E+00  0.000E+00  0.000E+00 0.00E+00 0.00E+00   NA 67  -9999   9999  0  9509 1  1
+JHOCO                             HOCO                                                     1.000E+00  0.000E+00  0.000E+00 0.00E+00 0.00E+00   NA 67  -9999   9999  0  9510 1  1 
+JCH3O                             CH3O                                                     1.000E+00  0.000E+00  0.000E+00 0.00E+00 0.00E+00   NA 66  -9999   9999  0  9511 1  1
+JCH3O                             CH3O                                                     1.000E+00  0.000E+00  0.000E+00 0.00E+00 0.00E+00   NA 67  -9999   9999  0  9512 1  1 
