--- a/Networks/kida.uva.2015/gas_reactions_kida.uva.2015.in
+++ b/Networks/kida.uva.2015/gas_reactions_kida.uva.2015.in
@@ -4893,7 +4893,7 @@ H2         C6H                    H          C6H2                               
 H          NH                     N          H2                                            1.730e-11  5.000e-01  2.400e+03 2.00e+00 0.00e+00 logn  4     10    800  3  4530 1  1
 NH         CH3                    H          CH2NH                                         1.300e-10  1.700e-01  0.000e+00 2.00e+00 1.00e+02 logn  4     10    300  3  4531 1  2
 CH         NH3                    H          CH2NH                                         1.520e-10 -5.000e-02  0.000e+00 1.20e+00 2.00e+00 logn  4     10    300  3  4532 1  3
-CH         NH3                    H          H2         HCN                                8.000e-12 -5.000e-02  0.000e+00 1.20e+00 2.00e+00 logn  4     10    300  3  4533 1  3
+CH         NH3                    NH         CH3                                           8.000e-12 -5.000e-02  0.000e+00 1.20e+00 2.00e+00 logn  4     10    300  3  4533 1  3
 CH3        NH3                    NH2        CH4                                           9.550e-14  0.000e+00  4.890e+03 2.00e+00 0.00e+00 logn  4     10    800  3  4534 1  1
 CN         H2                     H          HCN                                           4.040e-13  2.870e+00  8.200e+02 2.00e+00 0.00e+00 logn  4     10    800  3  4535 1  1
 CN         CH4                    HCN        CH3                                           3.140e-12  1.530e+00  5.040e+02 2.00e+00 0.00e+00 logn  4     10    800  3  4536 1  1
