Adding activation_energies file in the list of networks since it is related to a specific network (in particular for the next versions). In surface_parameters.in file: Corrections and updates. Change JC3H to Jc-C3H and Jl-C3H Change JC3H2 to Jc-C3H2 and Jl-C3H2 Update the binding energy of JHCl Add enthalpy of formation for JCCS, JC3S, JC4S, JNHNO, JNH2NO

--- a/Networks/kida.uva.2014/surface_parameters_kida.uva.2014.in
+++ b/Networks/kida.uva.2014/surface_parameters_kida.uva.2014.in
@@ -59,8 +59,11 @@ JC2H2        26  2587.    0. 0.0e+00 Collings                 *  +54.50
 JC2H3        27  3037.    0. 0.0e+00 C2H2+H                   *  +62.70
 JC2H4        28  3487.    0. 0.0e+00 C2H3+H                   *  +14.60
 JC2H5        29  3937.    0. 0.0e+00 C2H4+H                   *  +28.30
-JC3H         37  2937.    0. 0.0e+00 C2H+C                    * +176.65
-JC3H2        38  3387.    0. 0.0e+00 C3H+H                    * +137.83
+Jl-C3H       37  2937.    0. 0.0e+00 C2H+C                    * +176.65
+Jc-C3H       37  2937.    0. 0.0e+00 C2H+C                    * +176.65
+Jc-C3H2      38  3387.    0. 0.0e+00 C3H+H                    * +137.83
+Jl-C3H2      38  3387.    0. 0.0e+00 C3H+H                    * +137.83
+Jt-C3H2      38  3387.    0. 0.0e+00 C3H+H                    * +137.83
 JCH2CCH      39  3837.    0. 0.0e+00 C3H2+H                   *  +82.00
 JCH3CCH      40  4287.    0. 0.0e+00 C3H3+H                   *  +47.70
 JC3H5        41  4737.    0. 0.0e+00 C3H4+H                   *  +41.00
@@ -91,9 +94,9 @@ JHSSH        66  3100.    0. 0.0e+00 S2H+H                    *   +4.00
 JCS          44  1900.    0. 0.0e+00 C+S                      *  +65.30
 JHCS         45  2350.    0. 0.0e+00 CS+H                     *  +74.00
 JH2CS        46  2700.    0. 0.0e+00 HCS+H                    *  +28.30
-JCCS         56  2700.    0. 0.0e+00 C+C+S                    * -999.99
-JC3S         68  3500.    0. 0.0e+00 C2S+C                    * -999.99
-JC4S         80  4300.    0. 0.0e+00 C3S+C                    * -999.99
+JCCS         56  2700.    0. 0.0e+00 C+C+S                    *  145.30     /* Kaiser et al. 2002
+JC3S         68  3500.    0. 0.0e+00 C2S+C                    *  135.20     /* Petrie 1996
+JC4S         80  4300.    0. 0.0e+00 C3S+C                    *  182.30     /* M06-2X JC
 JCCO         40  1950.    0. 0.0e+00 CO+C                     *  +64.60
 JC3O         52  2750.    0. 0.0e+00 CCO+C                    *  +94.60
 JH2CCO       42  2200.    0. 0.0e+00 CH2+CO                   *  -10.70
@@ -104,8 +107,8 @@ JHOC         29  3650.    0. 0.0e+00 C+OH                     *  +10.00
 JH2CO        30  2050.    0. 0.0e+00 HCO+H                    *  -25.10
 JHNO         31  2050.    0. 0.0e+00 H+N+O                    *  +26.30
 JHON         31  3650.    0. 0.0e+00 N+OH                     *  +26.30
-JNHNO        45  2850.    0. 0.0e+00 HNO+N                    * -999.99
-JNH2NO       46  3300.    0. 0.0e+00 NHNO+H                   * -999.99
+JNHNO        45  2850.    0. 0.0e+00 HNO+N                    *   56.30    /* Baulch 2005 HNNO isomer
+JNH2NO       46  3300.    0. 0.0e+00 NHNO+H                   *   22.90    /* Baulch 2005
 JN2H         29  1450.    0. 0.0e+00 N2+H                     *  +76.20
 JCN          26  1600.    0. 0.0e+00 C+N                      * +104.40
 JCCN         38  2400.    0. 0.0e+00 CN+C                     * +133.00
@@ -152,7 +155,7 @@ JCCl         47  1900.    0. 0.0e+00 CL+C                     * +104.20
 JCl          35  1100.    0. 0.0e+00 same as S                *  +28.60
 JClO         51  1900.    0. 0.0e+00 CL+O                     *  +24.20
 JCP          43  1900.    0. 0.0e+00 C+P                      * +123.80
-JHCl         36  1550.    0. 0.0e+00 CL+H                     *  -22.00
+JHCl         36  5174.    0. 0.0e+00 Olanrewaju 2011,J.Ph.Ch  *  -22.00
 JHCP         37  2350.    0. 0.0e+00 H+C+P                    *  +51.00
 JHPO         48  2350.    0. 0.0e+00 H+P+O                    *  -12.70
 JN2O         44  2400.    0. 0.0e+00 N+N+O                    *  +20.30
